# MetaAudio

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ExceptHandle.h  HL1-REVERB.ods  Launcher.rc  LoadBlob.cpp  LoadBlob.h  MetaAudio.props  MetaHook.sln  MetaHook.vcproj  MetaHook.vcxproj  MetaHook.vcxproj.filters  MetaHook_DLL.sln  MetaHook_DLL.vcproj  MetaHook_DLL.vcxproj  MetaHook_DLL.vcxproj.filters  OEPHook.cpp  OpenAL.props  README.md  UAC.manifest  build-MetaAudio.bat  build-initdeps.bat  cdll_export.h  commandline.cpp  efx-reverb.sample.json  install-to-BlueShift.bat  install-to-CSCZDeletedScenes.bat  install-to-ConditionZero.bat  install-to-CounterStrike.bat  install-to-DayOfDefeat.bat  install-to-HalfLife.bat  install-to-OpposingForce.bat  launcher.cpp  metahook.cpp  metahook.h  metahook.props  registry.cpp  sys.h  (+1 more)
.github/workflows/: build.yml  release.yml  windows.yml
Detours/: detours.cpp  detours.h  detver.h  disasm.cpp  image.cpp  modules.cpp
HLSDK/common/: interface.cpp
HLSDK/dlls/: vector.h
Interface/: IAudio.h  ICommandLine.h  IEngine.h  IFileSystem.h  IPlugins.h  IPluginsV1.h  IRegistry.h
MetaAudio/: CMakeLists.txt  CMakeSettings.json  FileSystem.h  snd_dma.cpp  snd_vox.cpp  zone.h
MetaAudio/alure/: alure2.lib
MetaAudio/alure/AL/: alure2-aliases.h
MetaAudio/include/: aud_int_internal.h  snd_local.h
MetaAudio/src/: snd_loader.cpp  snd_mem.cpp  snd_voice.cpp  zone.cpp
MetaHook/: CMakeLists.txt  CMakeSettings.json  Launcher.rc  README.md
MetaHook/include/: ExceptHandle.h  LoadBlob.h  cdll_export.h  metahook.h
MetaHook/include/detours/: detours.h
MetaHook/include/interface/: IAudio.h  ICommandLine.h  IEngine.h  IFileSystem.h  IPlugins.h  IPluginsV1.h  IRegistry.h
MetaHook/src/: LoadBlob.cpp  commandline.cpp  launcher.cpp  metahook.cpp  registry.cpp  sys_launcher.cpp
MetaHook/src/detours/: detours.cpp  disasm.cpp  image.cpp  modules.cpp
Plugins/Audio/: Audio.sln  Audio.vcproj  Audio.vcxproj  Audio.vcxproj.filters  FileSystem.h  aud_int_internal.h  efx-util.h  enginedef.h  exportfuncs.cpp  exportfuncs.h  plat.h  plugins.cpp  plugins.h  qal.cpp  qal.h  snd_dma.cpp  snd_fx.cpp  snd_fx.hpp  snd_hook.cpp  snd_loader.cpp  snd_loader.h  snd_local.h  snd_mem.cpp  snd_voice.cpp  snd_voice.hpp  snd_vox..cpp  snd_vox.cpp  snd_vox.hpp  snd_wav.cpp  snd_wav.hpp  surface.cpp  util.h  zone.cpp  zone.h
Plugins/Audio/alure/: alure2.lib
Plugins/Audio/alure/AL/: alure2-alext.h  alure2-typeviews.h  alure2.h  efx.h
Plugins/CopyData/: CopyData.sln  CopyData.vcproj  exportfuncs.cpp  exportfuncs.h  plugins.cpp
Plugins/CopyData/Controls/: Controls.cpp  Controls.vcproj
Plugins/FuckWorld/: FuckWorld.sln  FuckWorld.vcproj  exportfuncs.cpp  plugins.cpp
Plugins/IMEInput/: BaseUI.cpp  BaseUI.h  Encode.cpp  Encode.h  IMEInput.cpp  IMEInput.sln  IMEInput.vcproj  Input.cpp  Input.h  UnicodeVoice.cpp  UnicodeVoice.h  cmd.h  exportfuncs.cpp  plugins.cpp
Plugins/SniperScope/: SniperScope.rar  SniperScope.sln  SniperScope.vcproj  exportfuncs.cpp  exportfuncs.h  mempatchs.cpp  mempatchs.h  plugins.cpp  plugins.h
Plugins/VGunLag/: VGunLag.sln  VGunLag.vcproj  exportfuncs.cpp  mathlib.cpp  mathlib.h  plugins.cpp  view.cpp
Plugins/WideScreen/: WideScreen.sln  WideScreen.vcproj  mempatchs.cpp  plugins.cpp
common/: interface.cpp
include/: AudioEngine.hpp  DynamicSteamAudio.hpp  FileSystem.h  SteamAudioLib.h  aud_int_internal.h  dynamic_steamaudio.h  dynamic_steamaudio.hpp  enginedef.h  plat.h  plugins.h  snd_efx_reader.hpp  snd_fx.hpp  snd_fx_manager.hpp  snd_loader.hpp  snd_local.h  snd_utilities.hpp
include/Config/: EfxJsonReader.hpp  SettingsManager.hpp
include/Effects/: EnvEffects.hpp  GoldSrcOcclusionCalculator.hpp  IOcclusionCalculator.hpp  SteamAudioOcclusionCalculator.hpp
include/Enums/: ClampingMode.hpp  OccluderType.hpp  XFiWorkaround.hpp
include/Loaders/: GoldSrcFileBuf.hpp  GoldSrcFileFactory.hpp  GoldSrcFileStream.hpp  LoadingBufferHandler.hpp  LocalAudioDecoder.hpp  SoundLoader.hpp  SoxrBitDepthNormalizerDecoder.hpp  SoxrDecoder.hpp  SteamAudioMapMeshLoader.hpp  SteamAudioSoundDecoder.hpp
include/SoundSources/: BaseSoundSource.hpp  SoundSourceFactory.hpp  StaticSoundSource.hpp  SteamAudioSoundSource.hpp  StreamingSoundSource.hpp
include/SteamAudio/: Context.hpp  ObjectPtr.hpp  Scene.hpp  Simulator.hpp  Source.hpp  StaticMesh.hpp
include/Structures/: AudioBuffer.hpp  FadeResult.hpp  OcclusionFilter.hpp  OcclusionFrequencyGain.hpp  Position.hpp  SteamAudioBuffer.hpp  Vector3.hpp
include/Utilities/: AudioCache.hpp  ChannelManager.hpp  ChannelPool.hpp  Fade.hpp  SoxrResamplerHelper.hpp  VectorUtils.hpp
include/Voice/: VoiceDecoder.hpp
include/Vox/: VoxManager.hpp
include/Workarounds/: IWorkarounds.hpp  NoWorkarounds.hpp  XFiWorkarounds.hpp
src/: AudioEngine.cpp  DynamicSteamAudio.cpp  SteamAudioLib.cpp  dynamic_steamaudio.cpp  exportfuncs.cpp  interface.cpp  metaaudio.cpp  snd_dma.cpp  snd_efx_reader.cpp  snd_fx.cpp  snd_fx_manager.cpp  snd_hook.cpp  snd_loader.cpp  snd_local.cpp  snd_mem.cpp  snd_vox.cpp
src/Config/: EfxJsonReader.cpp  SettingsManager.cpp
src/Effects/: EnvEffects.cpp  GoldSrcOcclusionCalculator.cpp  SteamAudioOcclusionCalculator.cpp
src/Loaders/: GoldSrcFileBuf.cpp  GoldSrcFileFactory.cpp  GoldSrcFileStream.cpp  LoadingBufferHandler.cpp  LocalAudioDecoder.cpp  SoundLoader.cpp  SoxrBitDepthNormalizerDecoder.cpp  SoxrDecoder.cpp  SteamAudioMapMeshLoader.cpp  SteamAudioSoundDecoder.cpp
src/SoundSources/: BaseSoundSource.cpp  SoundSourceFactory.cpp  StaticSoundSource.cpp  SteamAudioSoundSource.cpp  StreamingSoundSource.cpp
src/SteamAudio/: Context.cpp  Scene.cpp  Simulator.cpp  Source.cpp  StaticMesh.cpp
src/Utilities/: AudioCache.cpp  ChannelManager.cpp  ChannelPool.cpp  Fade.cpp  SoxrResamplerHelper.cpp
src/Voice/: VoiceDecoder.cpp
src/Vox/: VoxManager.cpp
src/Workarounds/: NoWorkarounds.cpp  XFiWorkarounds.cpp
